fix issue #34 content width on mobile

--- a/app/styles/section/_grouping.scss
+++ b/app/styles/section/_grouping.scss
@@ -9,6 +9,7 @@
 	// margin: 0;
 	width: 100%;
 	margin-bottom: 24px;
+	text-align: center;
 
 	&:last-child{
 		margin-bottom: 0px;
